"in" removed from syntax highlighting
codemirror-tscriptmode.js
- removed "in" from syntax highlighting, replaced by note

Makefile
- missing index.html.zip file recipe

--- a/distribution/Makefile
+++ b/distribution/Makefile
@@ -46,7 +46,9 @@ index.html: start ${JSFILES} middle ${CSSFILES} end
 	rm -f index.html
 	cat start ${JSFILES} middle ${CSSFILES} end > index.html
 
-zipfile: index.html
+zipfile: index.html.zip ;
+
+index.html.zip: index.html
 	rm -f index.html.zip
 	zip index.html.zip index.html
 
