--- a/source/package.json
+++ b/source/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.167",
+    "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.4",
     "raw-loader": "^4.0.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
