--- a/source/package.json
+++ b/source/package.json
@@ -7,6 +7,7 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "@interactjs/types": "^1.10.2",
     "@types/lodash": "^4.14.167",
     "css-loader": "^5.0.1",
     "mini-css-extract-plugin": "^1.3.4",
@@ -15,5 +16,9 @@
     "typescript": "^4.1.3",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "codemirror": "^5.59.1",
+    "interactjs": "^1.10.2"
   }
 }
