--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -3,20 +3,23 @@
     {
         "target": "es5",
         "lib": ["DOM", "ES2018", "ESNext"],
-        "outDir": "/dist/",
-        "module": "ES6",
+        "module": "ESNext",
         "removeComments": true,
         "sourceMap": true,
         "strict": true,
         "noImplicitAny": false,
         "noImplicitThis": false,
         "esModuleInterop": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Classic",
         
         "noFallthroughCasesInSwitch": true,
+        "incremental": false,
         //"strictNullChecks": true //would be nice if all these would work.
         //"noImplicitAny": true,
         //"noImplicitReturns" : true,
         //"noImplicitThis": true,
-    }
+    },
+    
+    "include": ["./node_modules/"]
+    
 }
