--- a/source/package.json
+++ b/source/package.json
@@ -13,10 +13,12 @@
     "@interactjs/types": "^1.10.2",
     "@types/lodash": "^4.14.167",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "mini-css-extract-plugin": "^1.3.4",
     "raw-loader": "^4.0.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   },
