--- a/source/package.json
+++ b/source/package.json
@@ -7,16 +7,21 @@
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development -w",
     "tsc": "tsc ./src/index.ts",
-    "test": "echo \"No tests.\" && exit 0"
+    "test": "mocha -r ts-node/register src/mocha/*"
   },
   "devDependencies": {
     "@interactjs/types": "^1.10.2",
+    "@types/chai": "^4.2.14",
     "@types/lodash": "^4.14.167",
+    "@types/mocha": "^8.2.0",
+    "chai": "^4.2.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "mini-css-extract-plugin": "^1.3.4",
+    "mocha": "^8.2.1",
     "raw-loader": "^4.0.2",
     "ts-loader": "^8.0.14",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.15.0",
