Added better build process

--- a/source/package.json
+++ b/source/package.json
@@ -16,6 +16,9 @@
     "@types/mocha": "^8.2.0",
     "chai": "^4.2.0",
     "css-loader": "^5.0.1",
+    "html-inline-css-webpack-plugin": "^1.10.0",
+    "html-inline-script-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^5.0.0-beta.6",
     "mini-css-extract-plugin": "^1.3.4",
     "mocha": "^8.2.1",
     "ts-loader": "^8.0.14",
