--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,8 +33,8 @@ jobs:
 
 # Push dist/ to dist
     - run: git checkout --orphan dist
-    - run: git config --local user.email "bot@bot.com"
-    - run: git config --local user.name "[bot]"
+    - run: git config --local user.email "f6eae15e-09a6-45d4-b9a1-f694f50b9e21@example.com"
+    - run: git config --local user.name "[🤖]"
     - run: mv dist/* .
     - run: git reset
     - run: git add index.html
