--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tscript.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack --mode=development -w -c ./webpack.config.js",
+    "dev": "webpack --mode=development --watch",
     "interop": "tsc ./src/interop.ts --outDir ./distribution/interop",
     "test": "mocha -r ts-node/register src/mocha/*"
   },
