--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development --watch",
-    "interop": "tsc ./src/interop.ts --outDir ./distribution/interop",
+    "interop": "webpack --mode=production --config webpack.interop.js",
     "test": "mocha -r ts-node/register src/mocha/*"
   },
   "devDependencies": {
