--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,10 +9,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [15.x]
-
     steps:
     - uses: actions/checkout@v2
       with:
@@ -20,10 +16,10 @@ jobs:
         fetch-depth: 0
 
 # Set up environment
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 15.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 15.x
     - name: Install dependencies
       run: npm ci
 
