--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 15.x
+    - name: Set up NPM cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: npm-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          npm-
     - name: Install dependencies
       run: npm ci
 
