--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development --watch",
     "interop": "webpack --mode=production --config webpack.interop.js",
-    "test": "mocha -r ts-node/register src/mocha/*"
+    "test": "mocha -r ts-node/register \"src/**/*.test.ts\""
   },
   "devDependencies": {
     "@interactjs/types": "^1.10.2",
