--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,33 +9,44 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [15.x]
-
     steps:
     - uses: actions/checkout@v2
       with:
         persist-credentials: false
         fetch-depth: 0
 
-# Compile and run tests
-    - name: Use Node.js ${{ matrix.node-version }}
+# Set up environment
+    - name: Use Node.js 15.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build
-    - run: npm run interop
-    - run: npm test
+        node-version: 15.x
+    - name: Set up NPM cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: npm-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          npm-
+    - name: Install dependencies
+      run: npm ci
 
-# Push dist/ to dist
-    - run: git checkout --orphan dist
-    - run: git config --local user.email "f6eae15e-09a6-45d4-b9a1-f694f50b9e21@example.com"
-    - run: git config --local user.name "🤖"
-    - run: git reset
-    - run: git add -f ./distribution/index.html
-    - run: git commit -m "Compiled latest"
+# Build and run tests
+    - name: Build IDE
+      run: npm run build
+    - name: Build interop
+      run: npm run interop
+    - name: Run tests
+      run: npm test
+
+# Deploy to GitHub Pages
+    - name: Commit distribution artifacts
+      run: |
+        git checkout --orphan dist
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git reset
+        git add -f ./distribution/index.html
+        git commit -m "Deploy site"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
