--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,25 @@ jobs:
         persist-credentials: false
         fetch-depth: 0
 
-# Compile and run tests
+# Set up environment
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build
-    - run: npm run interop
-    - run: npm test
+    - name: Set up NPM cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: npm-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          npm-
+    - name: Install dependencies
+      run: npm ci
+
+# Build and run tests
+    - name: Build IDE
+      run: npm run build
+    - name: Build interop
+      run: npm run interop
+    - name: Run tests
+      run: npm test
