--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
     "prettier": "prettier --write \"**/*\""
   },
   "devDependencies": {
-    "@interactjs/types": "^1.10.2",
-    "@types/chai": "^4.2.14",
-    "@types/lodash": "^4.14.167",
-    "@types/mocha": "^8.2.0",
-    "chai": "^4.2.0",
-    "css-loader": "^5.0.1",
-    "html-inline-css-webpack-plugin": "^1.10.0",
-    "html-inline-script-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^5.0.0-beta.6",
-    "mini-css-extract-plugin": "^1.3.4",
-    "mocha": "^8.2.1",
-    "prettier": "^2.2.1",
-    "ts-loader": "^8.0.14",
+    "@interactjs/types": "^1.10.11",
+    "@types/chai": "^4.2.21",
+    "@types/lodash": "^4.14.171",
+    "@types/mocha": "^8.2.3",
+    "chai": "^4.3.4",
+    "css-loader": "^5.2.7",
+    "html-inline-css-webpack-plugin": "^1.11.1",
+    "html-inline-script-webpack-plugin": "^1.1.4",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^1.6.2",
+    "mocha": "^8.4.0",
+    "prettier": "^2.3.2",
+    "ts-loader": "^8.3.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "typescript": "^4.3.5",
+    "webpack": "^5.47.1",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "@types/codemirror": "^0.0.106",
-    "codemirror": "^5.59.1",
-    "interactjs": "^1.10.2"
+    "codemirror": "^5.62.2",
+    "interactjs": "^1.10.11"
   }
 }
