--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.15.0",
+    "typescript": "^4.3.5",
+    "webpack": "^5.48.0",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
     "@types/codemirror": "^0.0.106",
     "codemirror": "^5.59.1",
-    "interactjs": "^1.10.2"
+    "interactjs": "^1.10.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
