--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
   "devDependencies": {
     "@interactjs/types": "^1.10.2",
     "@types/chai": "^4.2.14",
+    "@types/codemirror": "^5.60.2",
     "@types/lodash": "^4.14.167",
-    "@types/mocha": "^8.2.0",
+    "@types/mocha": "^9.0.0",
     "chai": "^4.2.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "^6.2.0",
     "html-inline-css-webpack-plugin": "^1.10.0",
-    "html-inline-script-webpack-plugin": "^1.0.1",
+    "html-inline-script-webpack-plugin": "^2.0.2",
     "html-webpack-plugin": "^5.0.0-beta.6",
-    "mini-css-extract-plugin": "^1.3.4",
-    "mocha": "^8.2.1",
+    "mini-css-extract-plugin": "^2.2.2",
+    "mocha": "^9.1.1",
     "prettier": "^2.2.1",
-    "ts-loader": "^8.0.14",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.5",
-    "webpack": "^5.48.0",
-    "webpack-cli": "^4.3.1"
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.1"
   },
   "dependencies": {
-    "@types/codemirror": "^0.0.106",
-    "codemirror": "^5.59.1",
-    "interactjs": "^1.10.2",
-    "webpack-dev-server": "^3.11.2"
+    "codemirror": "^5.62.3",
+    "interactjs": "^1.10.2"
   }
 }
