--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.1.1"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
     "codemirror": "^6.0.1",
     "interactjs": "^1.10.2"
   }
