First round of clean-up after transition to CM6: - The documentation now briefly mentions the new multi-document editor. - editor panels are now always above other panels when docked. - the table of contents of the documentation (tree view on the left) is reverted to sans-serif font. - Ctrl+D (block comment/uncomment code) is back. - Block indent/unindent is back.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "gen-icons": "npx ts-node ./src/ide/gen-icons.ts"
   },
   "devDependencies": {
+    "@codemirror/buildhelper": "^1.0.0",
     "@interactjs/types": "^1.10.2",
     "@types/chai": "^4.2.14",
-    "@types/codemirror": "^5.60.2",
+    "@types/codemirror": "^6.0.1",
     "@types/lodash": "^4.14.167",
     "@types/mocha": "^9.0.0",
     "chai": "^4.2.0",
