--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"strict": true,
 		"noImplicitAny": false,
 		"noImplicitThis": false,
+		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"moduleResolution": "Node",
 
