--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,23 +9,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           persist-credentials: false
-          fetch-depth: 0
 
       # Set up environment
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
-      - name: Set up NPM cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            npm-
+          node-version: 22
+          cache: npm
       - name: Install dependencies
         run: npm ci
 
