--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^4.1.1"
   },
   "dependencies": {
+    "@isomorphic-git/lightning-fs": "^4.6.0",
     "interactjs": "^1.10.2"
   }
 }
