--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.6.0",
     "interactjs": "^1.10.2",
-    "isomorphic-git": "^1.30.1"
+    "isomorphic-git": "^1.30.1",
+    "jwt-decode": "^4.0.0"
   }
 }
