--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.6.0",
+    "buffer": "^6.0.3",
     "interactjs": "^1.10.2",
     "isomorphic-git": "^1.30.1",
     "jwt-decode": "^4.0.0"
